fix(MobileNavigation): made mobilenavigation visible

--- a/src/components/Tokens/tokens.scss
+++ b/src/components/Tokens/tokens.scss
@@ -2,6 +2,7 @@
 
 .tokens-container {
     margin-top: 100px;
+    margin-bottom: 50px;
 
     .tokens-title {
         font-size: 36px;
